--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -10,21 +10,8 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Environment (conda_tensorflow2_p36)",
-      "language": "python",
-      "name": "conda_tensorflow2_p36"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.5"
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "cells": [
@@ -43,29 +30,13 @@
       "metadata": {
         "colab_type": "code",
         "id": "gwdg7Sv3XBaP",
-        "outputId": "278f5f07-f33f-427c-982e-c563eee96653",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        }
+        "colab": {}
       },
       "source": [
-        "%tensorflow_version 2.x #!pip3 install tensorflow-gpu==2.0  #unnecessary on aws if using conda_tensorflow2_p36"
+        "%tensorflow_version 2.x"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "`%tensorflow_version` only switches the major version: `1.x` or `2.x`.\n",
-            "You set: `2.x #!pip3 install tensorflow-gpu==2.0  #unnecessary on aws if using conda_tensorflow2_p36`. This will be interpreted as: `2.x`.\n",
-            "\n",
-            "\n",
-            "TensorFlow 2.x selected.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -78,7 +49,6 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import sklearn.metrics as sm\n",
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.layers import *\n",
@@ -93,7 +63,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "EjKPXZ3TX3Jb",
-        "outputId": "1bfef23a-648f-48df-8228-f0e2c344b028",
+        "outputId": "7e1140f2-c1f7-403d-f04d-17efdc4ecfc5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -102,24 +72,13 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "\n",
         "data = pd.read_csv('/content/drive/My Drive/cs230 project/collab/fer2013/fer2013.csv')\n",
         "\n",
-        "#data = pd.read_csv('fer2013/fer2013.csv')\n",
-        "\n",
         "#print('Number of samples in the dataset: ', data.shape[0])\n",
-        "emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
-        "\n",
-        "# See the target distribution (check for imbalance)\n",
-        "#target_counts = data['emotion'].value_counts().reset_index(drop=False)\n",
-        "#target_counts.columns = ['emotion', 'number_samples']\n",
-        "#target_counts['emotion'] = target_counts['emotion'].map(emotion_cat)\n",
-        "#target_counts\n",
-        "\n",
         "# Transform images from strings to lists of integers. TODO: use an array cast\n",
         "data['pixels'] = data['pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])"
       ],
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,6 +97,14 @@
         "colab": {}
       },
       "source": [
+        "emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
+        "\n",
+        "# See the target distribution (check for imbalance)\n",
+        "#target_counts = data['emotion'].value_counts().reset_index(drop=False)\n",
+        "#target_counts.columns = ['emotion', 'number_samples']\n",
+        "#target_counts['emotion'] = target_counts['emotion'].map(emotion_cat)\n",
+        "#target_counts\n",
+        "\n",
         "# Select randomly 10 images\n",
         "#random_seed = 1\n",
         "#data_sample = data.sample(10, random_state=random_seed)\n",
@@ -166,12 +133,10 @@
       },
       "source": [
         "data_train = data[data['Usage']=='Training']\n",
-        "size_train = data_train.shape[0]\n",
-        "#print('Number samples in the training dataset: ', size_train)\n",
+        "#print('Number samples in the training dataset: ', data_train.shape[0])\n",
         "\n",
         "data_dev = data[data['Usage']=='PublicTest']\n",
-        "size_dev = data_dev.shape[0]\n",
-        "#print('Number samples in the development dataset: ', size_dev)\n",
+        "#print('Number samples in the development dataset: ', data_dev.shape[0])\n",
         "\n",
         "# Retrieve train input and target\n",
         "X_train, y_train = data_train['pixels'].tolist(), data_train['emotion'].values\n",
@@ -182,9 +147,7 @@
         "\n",
         "# Retrieve dev input and target\n",
         "X_dev, y_dev = data_dev['pixels'].tolist(), data_dev['emotion'].values\n",
-        "# Reshape images to 4D (num_samples, width, height, num_channels)\n",
         "X_dev = np.array(X_dev, dtype='float32').reshape(-1,48,48,1)\n",
-        "# Normalize images with max\n",
         "X_dev = X_dev/255.0"
       ],
       "execution_count": 0,
@@ -195,15 +158,15 @@
       "metadata": {
         "colab_type": "code",
         "id": "Yi3lopGhZIuT",
+        "outputId": "81a73ee2-e992-465c-9e04-81bf304c1307",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b2bacf30-501a-42f7-801c-dd807d15de56"
+        }
       },
       "source": [
-        "#Do it yourself model\n",
-        "model_diy = tf.keras.models.Sequential([\n",
+        "#Baseline model\n",
+        "model = tf.keras.models.Sequential([\n",
         "    InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
         "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv1\"),\n",
         "    Dropout(0.25), BatchNormalization(),\n",
@@ -220,9 +183,9 @@
         "])\n",
         "\n",
         "print(\"Accuracy after training\")\n",
-        "model_diy.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
+        "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,43 +202,38 @@
         "colab_type": "code",
         "id": "iKzZuMBafv0a",
         "scrolled": true,
+        "outputId": "1c16e38c-cd0e-4768-d560-606d611f8393",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "3f37fcaa-4478-4d56-edda-23420c8fb0b0"
+        }
       },
       "source": [
-        "model_diy.fit(X_train,y_train,batch_size=32,epochs=5)\n",
-        "y_hat_dev = np.argmax(model_diy.predict(X_dev), axis=1)\n",
-        "\n",
-        "sm.accuracy_score(y_hat_dev, y_dev)"
+        "model.fit(X_train,y_train,batch_size=32,epochs=1,validation_data=(X_dev, y_dev))"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train on 28709 samples\n",
-            "Epoch 1/5\n",
-            "15200/28709 [==============>...............] - ETA: 15s - loss: 1.8063 - accuracy: 0.3213"
+            "Train on 28709 samples, validate on 3589 samples\n",
+            "28709/28709 [==============================] - 18s 615us/sample - loss: 1.6775 - accuracy: 0.3583 - val_loss: 1.5534 - val_accuracy: 0.3901\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fe5b5dc0cf8>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gVlZENbEpiyh",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
