WIP: state of art 75 paper

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -6,8 +6,7 @@
     "colab": {
       "name": "fer2013.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/master/fer2013.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -158,43 +147,35 @@
       "metadata": {
         "colab_type": "code",
         "id": "Yi3lopGhZIuT",
-        "outputId": "81a73ee2-e992-465c-9e04-81bf304c1307",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
-        "#Baseline model\n",
-        "model = tf.keras.models.Sequential([\n",
-        "    InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
-        "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv1\"),\n",
-        "    Dropout(0.25), BatchNormalization(),\n",
-        "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv2\"),\n",
-        "    Dropout(0.25), BatchNormalization(),\n",
-        "    MaxPool2D(pool_size=(2,2),name=\"maxpool1\"),\n",
-        "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv3\"),\n",
-        "    Dropout(0.25), BatchNormalization(),\n",
-        "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv4\"),\n",
-        "    Dropout(0.25), BatchNormalization(),\n",
-        "    Flatten(),\n",
-        "    Dense(1024,input_shape=(24*24*64,1),activation='relu',name='fc1'),\n",
-        "    Dense(7,input_shape=(1024,1),activation='softmax',name='fc-softmax')\n",
-        "])\n",
+        "#CPNCPNCPCFF 6 layers, 21.3m params, 75% state of art acc https://arxiv.org/pdf/1612.02903.pdf\n",
+        "model = tf.keras.models.Sequential(   \n",
+        "    [\n",
+        "      InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
+        "      Conv2D(filters=64,kernel_size=5,activation='relu',padding='same',name=\"conv1\"),\n",
+        "      MaxPool2D(pool_size=(2,2),name=\"maxpool1\"),\n",
+        "      BatchNormalization(),\n",
+        "      Conv2D(filters=96,kernel_size=5,activation='relu',padding='same',name=\"conv2\"),\n",
+        "      MaxPool2D(pool_size=(2,2),name=\"maxpool2\"),\n",
+        "      BatchNormalization(),\n",
+        "      Conv2D(filters=256,kernel_size=5,activation='relu',padding='same',name=\"conv3\"),\n",
+        "      MaxPool2D(pool_size=(2,2),name=\"maxpool3\"),\n",
+        "      BatchNormalization(),\n",
+        "      Conv2D(filters=256,kernel_size=5,activation='relu',padding='same',name=\"conv4\"),\n",
+        "      BatchNormalization(),\n",
+        "      Flatten(),\n",
+        "      Dense(2048,input_shape=(6*6*256,1),activation='relu',name='fc1'),\n",
+        "      BatchNormalization(),\n",
+        "      Dense(7,input_shape=(2048,1),activation='softmax',name='fc-softmax')\n",
+        "    ]\n",
+        ")\n",
         "\n",
-        "print(\"Accuracy after training\")\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Accuracy after training\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -202,22 +183,61 @@
         "colab_type": "code",
         "id": "iKzZuMBafv0a",
         "scrolled": true,
-        "outputId": "1c16e38c-cd0e-4768-d560-606d611f8393",
+        "outputId": "71850318-bf27-4051-9269-d9f575f1fe2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 731
         }
       },
       "source": [
-        "model.fit(X_train,y_train,batch_size=32,epochs=1,validation_data=(X_dev, y_dev))"
+        "model.fit(X_train,y_train,batch_size=32,epochs=20,validation_data=(X_dev, y_dev))"
       ],
-      "execution_count": 21,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 28709 samples, validate on 3589 samples\n",
-            "28709/28709 [==============================] - 18s 615us/sample - loss: 1.6775 - accuracy: 0.3583 - val_loss: 1.5534 - val_accuracy: 0.3901\n"
+            "Epoch 1/20\n",
+            "28709/28709 [==============================] - 16s 563us/sample - loss: 1.5161 - accuracy: 0.4478 - val_loss: 1.7416 - val_accuracy: 0.4040\n",
+            "Epoch 2/20\n",
+            "28709/28709 [==============================] - 16s 558us/sample - loss: 1.3910 - accuracy: 0.5088 - val_loss: 1.3521 - val_accuracy: 0.4739\n",
+            "Epoch 3/20\n",
+            "28709/28709 [==============================] - 16s 565us/sample - loss: 1.2641 - accuracy: 0.5579 - val_loss: 1.4997 - val_accuracy: 0.5026\n",
+            "Epoch 4/20\n",
+            "28709/28709 [==============================] - 16s 564us/sample - loss: 1.1149 - accuracy: 0.6191 - val_loss: 1.4092 - val_accuracy: 0.5155\n",
+            "Epoch 5/20\n",
+            "28709/28709 [==============================] - 16s 568us/sample - loss: 0.9588 - accuracy: 0.6819 - val_loss: 1.2840 - val_accuracy: 0.5313\n",
+            "Epoch 6/20\n",
+            "28709/28709 [==============================] - 16s 558us/sample - loss: 0.6443 - accuracy: 0.7709 - val_loss: 1.9568 - val_accuracy: 0.5587\n",
+            "Epoch 7/20\n",
+            "28709/28709 [==============================] - 16s 561us/sample - loss: 0.4510 - accuracy: 0.8422 - val_loss: 1.8544 - val_accuracy: 0.5481\n",
+            "Epoch 8/20\n",
+            "28709/28709 [==============================] - 16s 567us/sample - loss: 0.2836 - accuracy: 0.9047 - val_loss: 1.7828 - val_accuracy: 0.5662\n",
+            "Epoch 9/20\n",
+            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.2197 - accuracy: 0.9256 - val_loss: 2.0338 - val_accuracy: 0.5790\n",
+            "Epoch 10/20\n",
+            "28709/28709 [==============================] - 16s 561us/sample - loss: 0.1853 - accuracy: 0.9393 - val_loss: 2.2910 - val_accuracy: 0.5559\n",
+            "Epoch 11/20\n",
+            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.1663 - accuracy: 0.9444 - val_loss: 2.4085 - val_accuracy: 0.5339\n",
+            "Epoch 12/20\n",
+            "28709/28709 [==============================] - 16s 565us/sample - loss: 0.1357 - accuracy: 0.9545 - val_loss: 2.2970 - val_accuracy: 0.5860\n",
+            "Epoch 13/20\n",
+            "28709/28709 [==============================] - 16s 561us/sample - loss: 0.1264 - accuracy: 0.9579 - val_loss: 2.4031 - val_accuracy: 0.5874\n",
+            "Epoch 14/20\n",
+            "28709/28709 [==============================] - 16s 564us/sample - loss: 0.1330 - accuracy: 0.9550 - val_loss: 27.6737 - val_accuracy: 0.5634\n",
+            "Epoch 15/20\n",
+            "28709/28709 [==============================] - 16s 563us/sample - loss: 0.1144 - accuracy: 0.9614 - val_loss: 2.2176 - val_accuracy: 0.5809\n",
+            "Epoch 16/20\n",
+            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.1220 - accuracy: 0.9603 - val_loss: 2.5324 - val_accuracy: 0.5600\n",
+            "Epoch 17/20\n",
+            "28709/28709 [==============================] - 16s 561us/sample - loss: 0.0764 - accuracy: 0.9751 - val_loss: 2.7265 - val_accuracy: 0.5765\n",
+            "Epoch 18/20\n",
+            "28709/28709 [==============================] - 16s 560us/sample - loss: 0.0878 - accuracy: 0.9703 - val_loss: 22.9088 - val_accuracy: 0.4868\n",
+            "Epoch 19/20\n",
+            "28709/28709 [==============================] - 16s 561us/sample - loss: 0.0826 - accuracy: 0.9735 - val_loss: 2.5331 - val_accuracy: 0.5913\n",
+            "Epoch 20/20\n",
+            "28709/28709 [==============================] - 16s 561us/sample - loss: 0.0998 - accuracy: 0.9667 - val_loss: 2.6388 - val_accuracy: 0.5790\n"
           ],
           "name": "stdout"
         },
@@ -225,15 +245,28 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fe5b5dc0cf8>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fe5b601ea20>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 25
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-FSBxRPXHSZE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
