--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/master/fer2013.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/transfer-learning/fer2013.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -30,13 +30,25 @@
       "metadata": {
         "colab_type": "code",
         "id": "gwdg7Sv3XBaP",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "302d19fc-003c-48ca-92c3-219b8fa950d5"
       },
       "source": [
         "%tensorflow_version 2.x"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TensorFlow 2.x selected.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -52,6 +64,7 @@
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.layers import *\n",
+        "# turker\n",
         "\n",
         "%matplotlib inline"
       ],
@@ -63,10 +76,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "EjKPXZ3TX3Jb",
-        "outputId": "7e1140f2-c1f7-403d-f04d-17efdc4ecfc5",
+        "outputId": "3a36d981-01c4-4d58-e452-099b92717dc6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 122
         }
       },
       "source": [
@@ -78,12 +91,16 @@
         "# Transform images from strings to lists of integers. TODO: use an array cast\n",
         "data['pixels'] = data['pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])"
       ],
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -158,7 +175,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Yi3lopGhZIuT",
-        "outputId": "81a73ee2-e992-465c-9e04-81bf304c1307",
+        "outputId": "4ef427ab-6633-42cf-f10a-3b929bd51f7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -185,7 +202,7 @@
         "print(\"Accuracy after training\")\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 20,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +219,7 @@
         "colab_type": "code",
         "id": "iKzZuMBafv0a",
         "scrolled": true,
-        "outputId": "1c16e38c-cd0e-4768-d560-606d611f8393",
+        "outputId": "e2f1d855-3a9c-4aa0-db76-fc8538653937",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -211,13 +228,13 @@
       "source": [
         "model.fit(X_train,y_train,batch_size=32,epochs=1,validation_data=(X_dev, y_dev))"
       ],
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 28709 samples, validate on 3589 samples\n",
-            "28709/28709 [==============================] - 18s 615us/sample - loss: 1.6775 - accuracy: 0.3583 - val_loss: 1.5534 - val_accuracy: 0.3901\n"
+            "28709/28709 [==============================] - 19s 662us/sample - loss: 1.6916 - accuracy: 0.3579 - val_loss: 1.7476 - val_accuracy: 0.3714\n"
           ],
           "name": "stdout"
         },
@@ -225,13 +242,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fe5b5dc0cf8>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f0d403d19b0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 7
         }
       ]
     }
