Baseline model with no normalization

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -30,13 +30,25 @@
       "metadata": {
         "colab_type": "code",
         "id": "gwdg7Sv3XBaP",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "50b8e643-d706-466f-9a43-99e4648489fb"
       },
       "source": [
         "%tensorflow_version 2.x"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TensorFlow 2.x selected.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -63,10 +75,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "EjKPXZ3TX3Jb",
-        "outputId": "7e1140f2-c1f7-403d-f04d-17efdc4ecfc5",
+        "outputId": "e67051dc-30cc-4d02-a5c7-d2b89a08aa43",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 128
         }
       },
       "source": [
@@ -78,12 +90,16 @@
         "# Transform images from strings to lists of integers. TODO: use an array cast\n",
         "data['pixels'] = data['pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])"
       ],
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -158,10 +174,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "Yi3lopGhZIuT",
-        "outputId": "81a73ee2-e992-465c-9e04-81bf304c1307",
+        "outputId": "ab35ebc4-7477-4d4c-ae8d-ba386ccb5348",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
@@ -169,14 +185,10 @@
         "model = tf.keras.models.Sequential([\n",
         "    InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
         "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv1\"),\n",
-        "    Dropout(0.25), BatchNormalization(),\n",
         "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv2\"),\n",
-        "    Dropout(0.25), BatchNormalization(),\n",
         "    MaxPool2D(pool_size=(2,2),name=\"maxpool1\"),\n",
         "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv3\"),\n",
-        "    Dropout(0.25), BatchNormalization(),\n",
         "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv4\"),\n",
-        "    Dropout(0.25), BatchNormalization(),\n",
         "    Flatten(),\n",
         "    Dense(1024,input_shape=(24*24*64,1),activation='relu',name='fc1'),\n",
         "    Dense(7,input_shape=(1024,1),activation='softmax',name='fc-softmax')\n",
@@ -185,7 +197,7 @@
         "print(\"Accuracy after training\")\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,22 +214,41 @@
         "colab_type": "code",
         "id": "iKzZuMBafv0a",
         "scrolled": true,
-        "outputId": "1c16e38c-cd0e-4768-d560-606d611f8393",
+        "outputId": "5c4972b7-38c8-4612-babe-56cf2414832c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 417
         }
       },
       "source": [
-        "model.fit(X_train,y_train,batch_size=32,epochs=1,validation_data=(X_dev, y_dev))"
+        "model.fit(X_train,y_train,batch_size=32,epochs=10,validation_data=(X_dev, y_dev))"
       ],
-      "execution_count": 21,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 28709 samples, validate on 3589 samples\n",
-            "28709/28709 [==============================] - 18s 615us/sample - loss: 1.6775 - accuracy: 0.3583 - val_loss: 1.5534 - val_accuracy: 0.3901\n"
+            "Epoch 1/10\n",
+            "28709/28709 [==============================] - 15s 506us/sample - loss: 1.6193 - accuracy: 0.3600 - val_loss: 1.4222 - val_accuracy: 0.4441\n",
+            "Epoch 2/10\n",
+            "28709/28709 [==============================] - 14s 495us/sample - loss: 1.3203 - accuracy: 0.4910 - val_loss: 1.2728 - val_accuracy: 0.5049\n",
+            "Epoch 3/10\n",
+            "28709/28709 [==============================] - 14s 500us/sample - loss: 1.0732 - accuracy: 0.5954 - val_loss: 1.2437 - val_accuracy: 0.5414\n",
+            "Epoch 4/10\n",
+            "28709/28709 [==============================] - 14s 498us/sample - loss: 0.6827 - accuracy: 0.7538 - val_loss: 1.5091 - val_accuracy: 0.5444\n",
+            "Epoch 5/10\n",
+            "28709/28709 [==============================] - 14s 496us/sample - loss: 0.2528 - accuracy: 0.9172 - val_loss: 2.0924 - val_accuracy: 0.5233\n",
+            "Epoch 6/10\n",
+            "28709/28709 [==============================] - 14s 494us/sample - loss: 0.1053 - accuracy: 0.9747 - val_loss: 2.7336 - val_accuracy: 0.5319\n",
+            "Epoch 7/10\n",
+            "28709/28709 [==============================] - 14s 500us/sample - loss: 0.0706 - accuracy: 0.9859 - val_loss: 2.8974 - val_accuracy: 0.5300\n",
+            "Epoch 8/10\n",
+            "28709/28709 [==============================] - 14s 497us/sample - loss: 0.0774 - accuracy: 0.9826 - val_loss: 2.7034 - val_accuracy: 0.5146\n",
+            "Epoch 9/10\n",
+            "28709/28709 [==============================] - 14s 497us/sample - loss: 0.0519 - accuracy: 0.9891 - val_loss: 3.1952 - val_accuracy: 0.5358\n",
+            "Epoch 10/10\n",
+            "28709/28709 [==============================] - 14s 502us/sample - loss: 0.0586 - accuracy: 0.9894 - val_loss: 3.0434 - val_accuracy: 0.5297\n"
           ],
           "name": "stdout"
         },
@@ -225,15 +256,28 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fe5b5dc0cf8>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f97d87248d0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ABbKc8-Eq64L",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
