baseline: add dropout

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -174,7 +174,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Yi3lopGhZIuT",
-        "outputId": "ab35ebc4-7477-4d4c-ae8d-ba386ccb5348",
+        "outputId": "86b122e1-1994-44f0-c82d-382c3f9d210d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -185,10 +185,14 @@
         "model = tf.keras.models.Sequential([\n",
         "    InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
         "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv1\"),\n",
+        "    Dropout(0.25),\n",
         "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv2\"),\n",
+        "    Dropout(0.25),\n",
         "    MaxPool2D(pool_size=(2,2),name=\"maxpool1\"),\n",
         "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv3\"),\n",
+        "    Dropout(0.25),\n",
         "    Conv2D(filters=64,kernel_size=3,activation='relu',padding='same',name=\"conv4\"),\n",
+        "    Dropout(0.25),\n",
         "    Flatten(),\n",
         "    Dense(1024,input_shape=(24*24*64,1),activation='relu',name='fc1'),\n",
         "    Dense(7,input_shape=(1024,1),activation='softmax',name='fc-softmax')\n",
@@ -197,7 +201,7 @@
         "print(\"Accuracy after training\")\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +218,7 @@
         "colab_type": "code",
         "id": "iKzZuMBafv0a",
         "scrolled": true,
-        "outputId": "5c4972b7-38c8-4612-babe-56cf2414832c",
+        "outputId": "ef27572c-b831-42cd-cfc4-233392fe61ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 417
@@ -223,32 +227,32 @@
       "source": [
         "model.fit(X_train,y_train,batch_size=32,epochs=10,validation_data=(X_dev, y_dev))"
       ],
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 28709 samples, validate on 3589 samples\n",
             "Epoch 1/10\n",
-            "28709/28709 [==============================] - 15s 506us/sample - loss: 1.6193 - accuracy: 0.3600 - val_loss: 1.4222 - val_accuracy: 0.4441\n",
+            "28709/28709 [==============================] - 17s 584us/sample - loss: 1.6761 - accuracy: 0.3339 - val_loss: 1.5370 - val_accuracy: 0.4249\n",
             "Epoch 2/10\n",
-            "28709/28709 [==============================] - 14s 495us/sample - loss: 1.3203 - accuracy: 0.4910 - val_loss: 1.2728 - val_accuracy: 0.5049\n",
+            "28709/28709 [==============================] - 16s 560us/sample - loss: 1.4407 - accuracy: 0.4403 - val_loss: 1.4101 - val_accuracy: 0.4505\n",
             "Epoch 3/10\n",
-            "28709/28709 [==============================] - 14s 500us/sample - loss: 1.0732 - accuracy: 0.5954 - val_loss: 1.2437 - val_accuracy: 0.5414\n",
+            "28709/28709 [==============================] - 16s 562us/sample - loss: 1.2629 - accuracy: 0.5178 - val_loss: 1.2694 - val_accuracy: 0.5157\n",
             "Epoch 4/10\n",
-            "28709/28709 [==============================] - 14s 498us/sample - loss: 0.6827 - accuracy: 0.7538 - val_loss: 1.5091 - val_accuracy: 0.5444\n",
+            "28709/28709 [==============================] - 16s 566us/sample - loss: 1.0398 - accuracy: 0.6124 - val_loss: 1.2580 - val_accuracy: 0.5244\n",
             "Epoch 5/10\n",
-            "28709/28709 [==============================] - 14s 496us/sample - loss: 0.2528 - accuracy: 0.9172 - val_loss: 2.0924 - val_accuracy: 0.5233\n",
+            "28709/28709 [==============================] - 16s 564us/sample - loss: 0.7337 - accuracy: 0.7324 - val_loss: 1.2882 - val_accuracy: 0.5380\n",
             "Epoch 6/10\n",
-            "28709/28709 [==============================] - 14s 494us/sample - loss: 0.1053 - accuracy: 0.9747 - val_loss: 2.7336 - val_accuracy: 0.5319\n",
+            "28709/28709 [==============================] - 16s 563us/sample - loss: 0.4361 - accuracy: 0.8464 - val_loss: 1.5633 - val_accuracy: 0.5439\n",
             "Epoch 7/10\n",
-            "28709/28709 [==============================] - 14s 500us/sample - loss: 0.0706 - accuracy: 0.9859 - val_loss: 2.8974 - val_accuracy: 0.5300\n",
+            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.2589 - accuracy: 0.9119 - val_loss: 1.6783 - val_accuracy: 0.5352\n",
             "Epoch 8/10\n",
-            "28709/28709 [==============================] - 14s 497us/sample - loss: 0.0774 - accuracy: 0.9826 - val_loss: 2.7034 - val_accuracy: 0.5146\n",
+            "28709/28709 [==============================] - 16s 563us/sample - loss: 0.1866 - accuracy: 0.9403 - val_loss: 1.9683 - val_accuracy: 0.5414\n",
             "Epoch 9/10\n",
-            "28709/28709 [==============================] - 14s 497us/sample - loss: 0.0519 - accuracy: 0.9891 - val_loss: 3.1952 - val_accuracy: 0.5358\n",
+            "28709/28709 [==============================] - 16s 565us/sample - loss: 0.1464 - accuracy: 0.9553 - val_loss: 2.1586 - val_accuracy: 0.5358\n",
             "Epoch 10/10\n",
-            "28709/28709 [==============================] - 14s 502us/sample - loss: 0.0586 - accuracy: 0.9894 - val_loss: 3.0434 - val_accuracy: 0.5297\n"
+            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.1323 - accuracy: 0.9607 - val_loss: 2.0127 - val_accuracy: 0.5325\n"
           ],
           "name": "stdout"
         },
@@ -256,13 +260,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f97d87248d0>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f97d9e84e10>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 11
         }
       ]
     },
