wip: 100 epochs training

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -6,8 +6,7 @@
     "colab": {
       "name": "fer2013.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/75-soa/fer2013.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -198,7 +187,7 @@
         ")\n",
         "\n",
         "#TODO: weight decay of 0.0001...initial learning rate is set to 0.01 and reduced by a factor of 2 at every 25 epoch\n",
-        "sgd = tf.keras.optimizers.SGD(lr=0.01, decay=1e-4, momentum=0.9, nesterov=True)\n",
+        "sgd = tf.keras.optimizers.SGD(lr=0.01,momentum=0.9, nesterov=True)\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer=sgd,metrics=['accuracy'])"
       ],
       "execution_count": 0,
@@ -217,7 +206,7 @@
         }
       },
       "source": [
-        "model.fit(X_train,y_train,batch_size=200,epochs=100,validation_data=(X_dev, y_dev))"
+        "model.fit(X_train,y_train,batch_size=500,epochs=1000,validation_data=(X_dev, y_dev))"
       ],
       "execution_count": 12,
       "outputs": [
